Feat: Adding AI Documentation