@@ -8,8 +8,12 @@ import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.stream.IntStream;
 
-import com.ashish.thread.PlayingWithVT.ThreadType;
 
+
+/**
+ * Demonstrates various aspects of Virtual Threads in Java, including creation,
+ * performance with I/O-bound vs CPU-bound operations, and comparison with platform threads.
+ */
 public class PlayingWithVT {
 
   enum ThreadType {
@@ -17,59 +21,46 @@ public class PlayingWithVT {
     PlatformThread,
   }
 
+  private static final int THREAD_POOL_SIZE = 12;
+  private static final int TASK_LIMIT = 1000;
+  private static final int FACTORIAL_INPUT = 100000;
+  private static final int SLEEP_DURATION_SECONDS = 12;
+  private static final int LARGE_VT_COUNT = 10_000;
+  private static final int AWAIT_TIMEOUT_SECONDS = 60;
+  private static final int LARGE_VT_SLEEP_SECONDS = 1;
+
+  /**
+   * Main method demonstrating CPU-intensive operations with platform threads.
+   */
   public static void main(String[] args) throws InterruptedException {
-    // createLargeNumberOfVT();
-    // waysToCreateVT();
-    // observeHowSleepBehave(ThreadType.VirtualThread, executorService,1000000);
-    //
-    ExecutorService executorService = Executors.newFixedThreadPool(12);
-    // ExecutorService executorService =
-    // Executors.newVirtualThreadPerTaskExecutor();
-    observerHowCPUIntensiveOperationWork(ThreadType.PlatformThread, executorService, 1000);
+    ExecutorService executorService = Executors.newFixedThreadPool(THREAD_POOL_SIZE);
+    observeHowCPUIntensiveOperationWork(ThreadType.PlatformThread, executorService, TASK_LIMIT);
 
     System.out.println("Hello");
   }
 
-  static void dummyFunction() {
-    System.out.println("Hello");
-  }
 
+
+  /**
+   * Demonstrates how to create virtual threads using Thread.startVirtualThread().
+   */
   static void waysToCreateVT() throws InterruptedException {
-
-    // Via Thread.Builder interface
-    // Thread.Builder builder = Thread.ofVirtual().name("MyThread");
-    // Runnable task = () -> {
-    // System.out.println("Running thread");
-    // };
-    // Thread t = builder.start(task);
-    // System.out.println("Thread t name: " + t.getName());
-    // t.join();
-
-    // Via Thread.ofVirtual
-    // Thread thread = Thread.ofVirtual().start(() -> System.out.println("Hello"));
-    // thread.join();
-
-    // Via Executors
-    // try (var executor = Executors.newVirtualThreadPerTaskExecutor()) {
-    // IntStream.range(0, 10).forEach(i -> {
-    // executor.submit(() -> {
-    // System.out.println("Thread Name: " + Thread.currentThread().toString());
-    // });
-    // });
-    // }
-
     // Via Thread.startVirtualThread
     Thread vt = Thread.startVirtualThread(() -> System.out.println("Hello"));
     vt.join();
   }
 
+  /**
+   * Creates a large number of virtual threads to demonstrate scalability.
+   * Each thread sleeps for a short duration to simulate I/O operations.
+   */
   static void createLargeNumberOfVT() {
 
     try (var executor = Executors.newVirtualThreadPerTaskExecutor()) {
-      IntStream.range(0, 10_000).forEach(i -> {
+      IntStream.range(0, LARGE_VT_COUNT).forEach(i -> {
         executor.submit(() -> {
           try {
-            Thread.sleep(Duration.ofSeconds(1));
+            Thread.sleep(Duration.ofSeconds(LARGE_VT_SLEEP_SECONDS));
           } catch (InterruptedException e) {
             throw new RuntimeException(e);
           }
@@ -80,53 +71,81 @@ public class PlayingWithVT {
     }
   }
 
+  /**
+   * Observes the behavior of threads during sleep operations (I/O-bound simulation).
+   * Measures the total time taken for all tasks to complete.
+   *
+   * @param type the type of thread (Virtual or Platform)
+   * @param executorService the executor to submit tasks to
+   * @param limit the number of tasks to submit
+   */
   static void observeHowSleepBehave(ThreadType type, ExecutorService executorService, int limit) {
 
     long start = System.nanoTime();
     System.out.println("Starting Test at start with ==> " + type.name());
-    try (executorService) {
-      Duration sleep = Duration.ofSeconds(12);
-      for (int i = 0; i < limit; i++) {
-        executorService.submit(new Runnable() {
-          @Override
-          public void run() {
-            try {
-              Thread.sleep(sleep);
-            } catch (InterruptedException e) {
-              e.printStackTrace();
-            }
-            System.out.println("Thread Name: " + Thread.currentThread().toString() + ": is virtual "
-                + Thread.currentThread().isVirtual());
-          }
-        });
+    Duration sleep = Duration.ofSeconds(SLEEP_DURATION_SECONDS);
+    for (int i = 0; i < limit; i++) {
+      executorService.submit(() -> {
+        try {
+          Thread.sleep(sleep);
+        } catch (InterruptedException e) {
+          Thread.currentThread().interrupt();
+        }
+        System.out.println("Thread Name: " + Thread.currentThread().toString() + ": is virtual "
+            + Thread.currentThread().isVirtual());
+      });
+    }
+    executorService.shutdown();
+    try {
+      if (!executorService.awaitTermination(AWAIT_TIMEOUT_SECONDS, java.util.concurrent.TimeUnit.SECONDS)) {
+        executorService.shutdownNow();
       }
+    } catch (InterruptedException e) {
+      executorService.shutdownNow();
     }
     Duration demoElapsed = Duration.ofNanos(System.nanoTime() - start);
     System.out.println("INFO - test took " + demoElapsed.getSeconds() + " seconds");
   }
 
-  static void observerHowCPUIntensiveOperationWork(ThreadType type, ExecutorService executorService, int limit) {
+  /**
+   * Observes the behavior of threads during CPU-intensive operations.
+   * Each task computes a large factorial to simulate CPU-bound work.
+   *
+   * @param type the type of thread (Virtual or Platform)
+   * @param executorService the executor to submit tasks to
+   * @param limit the number of tasks to submit
+   */
+  static void observeHowCPUIntensiveOperationWork(ThreadType type, ExecutorService executorService, int limit) {
     long start = System.nanoTime();
-    System.out.println("Starting observerHowCPUIntensiveOperationWork Test at start with ==> " + type.name());
+    System.out.println("Starting observeHowCPUIntensiveOperationWork Test at start with ==> " + type.name());
 
-    try (executorService) {
-      for (int i = 0; i < limit; i++) {
-        executorService.submit(new Runnable() {
-          @Override
-          public void run() {
-            // System.out.println("Before Thread Name: " + Thread.currentThread().toString()
-            // + ": is virtual " + Thread.currentThread().isVirtual());
-            BigInteger result = factorial(100000);
-            // System.out.println("After Thread Name: " + Thread.currentThread().toString()
-            // + ": is virtual " + Thread.currentThread().isVirtual());
-          }
-        });
+    for (int i = 0; i < limit; i++) {
+      executorService.submit(() -> {
+        // System.out.println("Before Thread Name: " + Thread.currentThread().toString()
+        // + ": is virtual " + Thread.currentThread().isVirtual());
+        BigInteger result = factorial(FACTORIAL_INPUT);
+        // System.out.println("After Thread Name: " + Thread.currentThread().toString()
+        // + ": is virtual " + Thread.currentThread().isVirtual());
+      });
+    }
+    executorService.shutdown();
+    try {
+      if (!executorService.awaitTermination(AWAIT_TIMEOUT_SECONDS, java.util.concurrent.TimeUnit.SECONDS)) {
+        executorService.shutdownNow();
       }
+    } catch (InterruptedException e) {
+      executorService.shutdownNow();
     }
     Duration demoElapsed = Duration.ofNanos(System.nanoTime() - start);
-    System.out.println("INFO - observerHowCPUIntensiveOperationWork took " + demoElapsed.getSeconds() + " seconds");
+    System.out.println("INFO - observeHowCPUIntensiveOperationWork took " + demoElapsed.getSeconds() + " seconds");
   }
 
+  /**
+   * Computes the factorial of a number using BigInteger to handle large values.
+   *
+   * @param n the number to compute factorial for
+   * @return the factorial result as BigInteger
+   */
   private static BigInteger factorial(int n) {
     BigInteger result = BigInteger.ONE;
     for (int i = 2; i <= n; i++) {
@@ -135,6 +154,6 @@ public class PlayingWithVT {
     return result;
   }
 
-  private List<String> dummyList = new ArrayList<>(); // This is a dummy list
+
 
 }
